調整代碼
